--- a/Personal Website Project/CoolHome.html
+++ b/Personal Website Project/CoolHome.html
@@ -16,5 +16,12 @@
             <h3 class="second">Like This!</h3>
             <h3 class="third">Like This!</h3>
         </div> 
+        
+        <div class="wrapper">
+            <div class="box box1">Box 1</div>
+            <div class="box box2">Box 2</div>
+            <div class="box box3">Box 3</div>
+            <div class="box box4">Box 4</div>
+        </div>
     </body>
 </html>
