Responsiveness to Home page and Favicon

--- a/Personal Website Project/CoolPhotos.html
+++ b/Personal Website Project/CoolPhotos.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="gallery.css">
         <title>Shranav's Gallery</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="./icons8-favicon.gif">
     </head>
     <body>
         
