Fixed some Page Switching Bug PROJECTS page needs building

--- a/Personal Website Project/CoolHome.html
+++ b/Personal Website Project/CoolHome.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <ul>
-            <li><a href="./CoolPhotos.html" class="active">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="./CoolHome.html" class="active">Home</a></li>
+            <li><a href="./CoolProjects.html">Projects</a></li>
             <li><a href="./CoolPhotos.html" >Gallery</a></li>
             <li class="right"><a href="#about">About</a></li>
         </ul>
