--- a/Personal Website Project/CoolPhotos.html
+++ b/Personal Website Project/CoolPhotos.html
@@ -10,7 +10,7 @@
         
         <ul>
             <li><a href="./CoolHome.html">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="./CoolProjects.html">Projects</a></li>
             <li><a href="./CoolPhotos.html" class="active">Gallery</a></li>
             <li class="right"><a href="#about">About</a></li>
         </ul>
